k8s/devicemanagement/devicemanagement-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devicemanagement
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devicemanagement
  template:
    metadata:
      labels:
        app: devicemanagement
    spec:
      containers:
      - name: devicemanagement
        image: optimove-devicemanagement:0.0.1
        resources:
          limits:
            memory: "256Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config/application.yml
          subPath: application.yml
        ports:
        - containerPort: 8080
      volumes:
      - name: config-volume
        configMap:
          name: devicemanagement-application-config
