k8s/devicemanagement/devicemanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devicemanagement
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: devicemanagement
  type: ClusterIP
