k8s/devicemanagement/devicemanagement-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devicemanagement-ingress
  namespace: backend
spec:
  rules:
    - http:
        paths:
          - path: /api/devicemanagement
            pathType: Prefix
            backend:
              service:
                name: devicemanagement
                port:
                  number: 8080
